--- a/wiki/NginxConfigHowto.wiki
+++ b/wiki/NginxConfigHowto.wiki
@@ -3,7 +3,8 @@
 
 <h5>推荐链接</h5>
 <ul>
-<li><a href='http://sudone.com/conf/nginx.conf.html' target='_blank'>便于管理的nginx配置</a></li>
-
+<li><a href='http://sudone.com/conf/nginx.conf.html' target='_blank' >便于管理的nginx配置</a></li>
+<li><a href='http://sudone.com/conf/nginx_nginx.conf.html' target='_blank' >nginx/nginx.conf</a></li>
+<li><a href='http://sudone.com/conf/nginx_proxy.conf.html' target='_blank' >nginx/proxy.conf</a></li>
 
 </ul>
